refactor(models): enhance entity models and repositories
- Improve FinancialGoal model with completion tracking
- Enhance FinancialGoalRepository with custom queries
- Refactor TransactionService for better separation of concerns
- Update application properties with improved configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -141,7 +141,7 @@ server.port=${app.server.port}
 server.servlet.context-path=${app.server.context-path}
 
 management.endpoints.web.exposure.include=${app.actuator.endpoints}
-management.endpoint.health.show-details=${app.actuator.expose-health-details}
+management.endpoint.health.show-details=WHEN_AUTHORIZED
 management.endpoints.web.base-path=${app.actuator.base-path}
 
 # JWT Configuration (legacy)
