fix(docker): improve Docker and script compatibility
- Add SKIP_TESTS build argument to Dockerfile
- Update docker-compose.yml to pass SKIP_TESTS as build arg
- Fix macOS compatibility issues in all script modules
- Replace docker-compose with docker compose (v2 syntax)
- Add gtimeout fallback for macOS timeout command
- Improve quality check service configuration
- Ensure --no-test flag works properly across all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: base
+      args:
+        SKIP_TESTS: "${SKIP_TESTS:-false}"
     environment:
       GRADLE_OPTS: "-Dorg.gradle.console=rich -Dorg.gradle.daemon=false"
       SKIP_TESTS: "${SKIP_TESTS:-false}"
@@ -126,6 +128,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: base
+      args:
+        SKIP_TESTS: "${SKIP_TESTS:-false}"
     environment:
       GRADLE_OPTS: "-Dorg.gradle.console=rich -Dorg.gradle.daemon=false"
       SPRING_PROFILES_ACTIVE: test
@@ -159,6 +163,8 @@ services:
       context: .
       dockerfile: Dockerfile
       target: base
+      args:
+        SKIP_TESTS: "${SKIP_TESTS:-false}"
     environment:
       GRADLE_OPTS: "-Dorg.gradle.console=rich -Dorg.gradle.daemon=false"
       SKIP_TESTS: "${SKIP_TESTS:-false}"
