feat(brazilian-market): implement Brazilian market data integration
- Add Brazilian market data module with entities, DTOs, and services
- Implement BCB API client for Selic rate and economic indicators
- Implement Brazilian stocks API client for stocks and FIIs
- Create entities for Brazilian market instruments (stocks, FIIs, bonds)
- Add REST controllers for market data endpoints
- Create unit tests for market data services
- Add database migration V4 for Brazilian market tables
- Configure application properties for Brazilian market APIs
- Enable async processing and scheduling for market data updates

Closes #brazilian-market-integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -147,3 +147,12 @@ management.endpoints.web.base-path=${app.actuator.base-path}
 # JWT Configuration (legacy)
 jwt.secret=${app.security.jwt.secret}
 jwt.expiration=${app.security.jwt.expiration-ms}
+
+# Brazilian Market Data Configuration
+brazilian-market.bcb.base-url=${BCB_BASE_URL:https://api.bcb.gov.br/dados/serie/bcdata.sgs}
+brazilian-market.bcb.api-key=${BCB_API_KEY:}
+brazilian-market.stocks.base-url=${BRAZILIAN_STOCKS_API_URL:https://api.brazilianstocks.com}
+brazilian-market.alpha-vantage.api-key=${ALPHA_VANTAGE_API_KEY:}
+brazilian-market.update-interval=${MARKET_DATA_UPDATE_INTERVAL:3600000}
+brazilian-market.cache.enabled=${MARKET_DATA_CACHE_ENABLED:true}
+brazilian-market.cache.ttl=${MARKET_DATA_CACHE_TTL:300000}
