feat(dashboard): implement comprehensive financial dashboard
- Add interactive financial dashboard with comprehensive metrics and visualizations
- Implement DashboardService with real-time financial calculations
- Add DashboardController with REST API endpoints for dashboard data
- Create comprehensive DTOs for dashboard data transfer
- Add spending analytics with category breakdowns and percentages
- Implement monthly trends for income/expense visualization
- Add goal progress tracking and visualization
- Create dashboard cache tables for improved performance
- Add unit tests for dashboard functionality
- Update application properties with dashboard configuration
- Update CHANGELOG and README with dashboard features

Closes #dashboard-implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -156,3 +156,11 @@ brazilian-market.alpha-vantage.api-key=${ALPHA_VANTAGE_API_KEY:}
 brazilian-market.update-interval=${MARKET_DATA_UPDATE_INTERVAL:3600000}
 brazilian-market.cache.enabled=${MARKET_DATA_CACHE_ENABLED:true}
 brazilian-market.cache.ttl=${MARKET_DATA_CACHE_TTL:300000}
+
+# Dashboard Configuration
+app.dashboard.cache.enabled=${DASHBOARD_CACHE_ENABLED:true}
+app.dashboard.cache.ttl=${DASHBOARD_CACHE_TTL:900000}
+app.dashboard.default-period-months=${DASHBOARD_DEFAULT_PERIOD_MONTHS:12}
+app.dashboard.refresh-interval=${DASHBOARD_REFRESH_INTERVAL:900000}
+app.dashboard.max-categories=${DASHBOARD_MAX_CATEGORIES:10}
+app.dashboard.chart-colors=${DASHBOARD_CHART_COLORS:#FF6384,#36A2EB,#FFCE56,#4BC0C0,#9966FF,#FF9F40}
