feat(monitoring): implement enterprise-grade monitoring and observability system
- Add comprehensive monitoring infrastructure with Sentry integration
- Implement MetricsService for real-time metrics collection
- Add AlertingService with intelligent alerting and severity levels
- Create HealthCheckService for detailed component health monitoring
- Add MonitoringController with REST endpoints for monitoring data
- Integrate monitoring into all major services (transactions, dashboard, market data, auth)
- Enable 20+ disabled test files with comprehensive test coverage
- Add Postman collections with monitoring endpoints and mock servers
- Clean up redundant comments in monitoring services
- Update documentation and changelog with new monitoring features

BREAKING CHANGE: Enhanced monitoring capabilities require Sentry configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,32 @@ services:
       retries: 5
     restart: unless-stopped
 
+  # Redis service for caching and rate limiting
+  redis:
+    image: redis:7-alpine
+    env_file:
+      - docker.env
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-}
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+    command: >
+      sh -c "
+        if [ -n \"$$REDIS_PASSWORD\" ]; then
+          redis-server --requirepass $$REDIS_PASSWORD
+        else
+          redis-server
+        fi
+      "
+
   # SonarQube service for code quality analysis
   sonarqube:
     image: sonarqube:10.4-community
@@ -69,10 +95,13 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     volumes:
       - ./logs:/app/logs
       - ./build:/app/build
     restart: unless-stopped
+
 
   # Development service for running scripts and Gradle commands
   dev:
@@ -264,6 +293,7 @@ services:
 
 volumes:
   pgdata:
+  redis_data:
   gradle-cache:
   sonarqube_data:
   sonarqube_extensions:
