--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -150,6 +150,48 @@ management.endpoints.web.base-path=${app.actuator.base-path}
 jwt.secret=${app.security.jwt.secret}
 jwt.expiration=${app.security.jwt.expiration-ms}
 
+# Spring Boot Redis Configuration
+spring.data.redis.host=${app.redis.host}
+spring.data.redis.port=${app.redis.port}
+spring.data.redis.password=${app.redis.password}
+spring.data.redis.database=${app.redis.database}
+spring.data.redis.timeout=${app.redis.timeout}
+spring.data.redis.lettuce.pool.max-active=${app.redis.pool.max-active}
+spring.data.redis.lettuce.pool.max-idle=${app.redis.pool.max-idle}
+spring.data.redis.lettuce.pool.min-idle=${app.redis.pool.min-idle}
+spring.data.redis.lettuce.pool.max-wait=${app.redis.pool.max-wait}
+
+# Spring Boot Cache Configuration
+spring.cache.type=redis
+spring.cache.redis.time-to-live=${app.cache.ttl.dashboard}
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.enable-statistics=true
+
+# Monitoring Configuration
+app.monitoring.enabled=${MONITORING_ENABLED:true}
+app.monitoring.sentry.enabled=${SENTRY_ENABLED:true}
+app.monitoring.health-check.interval=${HEALTH_CHECK_INTERVAL:30}
+
+# Spring Boot Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics,env,configprops,beans,mappings,loggers
+management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-components=always
+management.endpoint.info.enabled=true
+management.endpoint.metrics.enabled=true
+management.metrics.tags.application=finance-control
+management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:dev}
+
+# Sentry Configuration
+sentry.dsn=${SENTRY_DSN:}
+sentry.environment=${SPRING_PROFILES_ACTIVE:dev}
+sentry.release=${SENTRY_RELEASE:1.0.0}
+sentry.sample-rate=${SENTRY_SAMPLE_RATE:0.1}
+sentry.traces-sample-rate=${SENTRY_TRACES_SAMPLE_RATE:0.1}
+sentry.profiles-sample-rate=${SENTRY_PROFILES_SAMPLE_RATE:0.1}
+sentry.send-default-pii=false
+sentry.attach-stacktrace=true
+sentry.enable-tracing=true
+
 # Brazilian Market Data Configuration
 brazilian-market.bcb.base-url=${BCB_BASE_URL:https://api.bcb.gov.br/dados/serie/bcdata.sgs}
 brazilian-market.bcb.api-key=${BCB_API_KEY:}
@@ -158,6 +200,29 @@ brazilian-market.alpha-vantage.api-key=${ALPHA_VANTAGE_API_KEY:}
 brazilian-market.update-interval=${MARKET_DATA_UPDATE_INTERVAL:3600000}
 brazilian-market.cache.enabled=${MARKET_DATA_CACHE_ENABLED:true}
 brazilian-market.cache.ttl=${MARKET_DATA_CACHE_TTL:300000}
+
+# Redis Configuration
+app.redis.host=${REDIS_HOST:localhost}
+app.redis.port=${REDIS_PORT:6379}
+app.redis.password=${REDIS_PASSWORD:}
+app.redis.database=${REDIS_DATABASE:0}
+app.redis.timeout=${REDIS_TIMEOUT:2000}
+app.redis.pool.max-active=${REDIS_POOL_MAX_ACTIVE:8}
+app.redis.pool.max-idle=${REDIS_POOL_MAX_IDLE:8}
+app.redis.pool.min-idle=${REDIS_POOL_MIN_IDLE:0}
+app.redis.pool.max-wait=${REDIS_POOL_MAX_WAIT:-1}
+
+# Cache Configuration
+app.cache.enabled=${CACHE_ENABLED:true}
+app.cache.ttl.dashboard=${CACHE_TTL_DASHBOARD:900000}
+app.cache.ttl.market-data=${CACHE_TTL_MARKET_DATA:300000}
+app.cache.ttl.user-data=${CACHE_TTL_USER_DATA:1800000}
+
+# Rate Limiting Configuration
+app.rate-limit.enabled=${RATE_LIMIT_ENABLED:true}
+app.rate-limit.requests-per-minute=${RATE_LIMIT_REQUESTS_PER_MINUTE:100}
+app.rate-limit.burst-capacity=${RATE_LIMIT_BURST_CAPACITY:200}
+app.rate-limit.refresh-period=${RATE_LIMIT_REFRESH_PERIOD:60}
 
 # Dashboard Configuration
 app.dashboard.cache.enabled=${DASHBOARD_CACHE_ENABLED:true}
