feat(sentry): implement comprehensive Sentry configuration and integration
- Add SentryConfig with comprehensive initialization and filtering
- Create SentryService for centralized error tracking with user context
- Update MetricsService and AlertingService to use SentryService
- Add enhanced Sentry configuration in application properties and docker.env
- Create comprehensive test coverage for Sentry integration
- Add automated Sentry testing script for configuration validation
- Update documentation with Sentry configuration instructions
- Integrate Sentry with existing monitoring infrastructure

BREAKING CHANGE: Enhanced Sentry integration requires proper DSN configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -183,14 +183,17 @@ management.metrics.tags.environment=${SPRING_PROFILES_ACTIVE:dev}
 
 # Sentry Configuration
 sentry.dsn=${SENTRY_DSN:}
-sentry.environment=${SPRING_PROFILES_ACTIVE:dev}
+sentry.environment=${SENTRY_ENVIRONMENT:${SPRING_PROFILES_ACTIVE:dev}}
 sentry.release=${SENTRY_RELEASE:1.0.0}
 sentry.sample-rate=${SENTRY_SAMPLE_RATE:0.1}
 sentry.traces-sample-rate=${SENTRY_TRACES_SAMPLE_RATE:0.1}
 sentry.profiles-sample-rate=${SENTRY_PROFILES_SAMPLE_RATE:0.1}
-sentry.send-default-pii=false
-sentry.attach-stacktrace=true
-sentry.enable-tracing=true
+sentry.send-default-pii=${SENTRY_SEND_DEFAULT_PII:false}
+sentry.attach-stacktrace=${SENTRY_ATTACH_STACKTRACE:true}
+sentry.enable-tracing=${SENTRY_ENABLE_TRACING:true}
+sentry.debug=${SENTRY_DEBUG:false}
+sentry.server-name=${SENTRY_SERVER_NAME:finance-control}
+sentry.tags=${SENTRY_TAGS:environment:dev,service:finance-control}
 
 # Brazilian Market Data Configuration
 brazilian-market.bcb.base-url=${BCB_BASE_URL:https://api.bcb.gov.br/dados/serie/bcdata.sgs}
