fix(monitoring): resolve circular dependency in monitoring services
- Removed @PostConstruct initialization from MonitoringConfig to avoid circular dependencies
- Added lazy initialization to AlertingService with ensureMonitoringStarted() method
- Monitoring services now initialize on first access instead of at startup
- Fixed MonitoringConfig to not inject AlertingService

This resolves the circular dependency that was preventing application startup.

Related to: monitoring, circular dependency, startup issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,7 @@ services:
       dockerfile: Dockerfile
       args:
         DEV_MODE: "${DEV_MODE}"
+        SKIP_TESTS: "${SKIP_TESTS:-false}"
     env_file:
       - docker.env
     environment:
