--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -115,11 +115,12 @@ app.pagination.max-page-size=${PAGINATION_MAX_PAGE_SIZE:100}
 app.pagination.default-sort=${PAGINATION_DEFAULT_SORT:id}
 app.pagination.default-direction=${PAGINATION_DEFAULT_DIRECTION:ASC}
 
-# Legacy Spring Boot Properties (for backward compatibility)
-spring.datasource.url=${app.database.url}:${app.database.port}/${app.database.name}
-spring.datasource.username=${app.database.username}
-spring.datasource.password=${app.database.password}
-spring.datasource.driver-class-name=${app.database.driver-class-name}
+# Legacy Spring Boot Properties (for backward compatibility) - DISABLED
+# Using custom DatabaseConfig instead
+# spring.datasource.url=${app.database.url}:${app.database.port}/${app.database.name}
+# spring.datasource.username=${app.database.username}
+# spring.datasource.password=${app.database.password}
+# spring.datasource.driver-class-name=${app.database.driver-class-name}
 
 # Bean definition override to resolve JPA auditing handler conflict
 spring.main.allow-bean-definition-overriding=true
