feat(investments): implement unified investments table with external API integration
- Created unified investments table to replace separate brazilian_stocks, fii_funds, and brazilian_bonds tables
- Added comprehensive investment classification with type, subtype, sector, and industry fields
- Implemented flexible Investment entity supporting stocks, FIIs, bonds, ETFs, crypto, and other asset types
- Added external market data integration with Alpha Vantage API for real-time price updates
- Created comprehensive InvestmentRepository with advanced querying capabilities
- Implemented InvestmentService with CRUD operations and market data management
- Added InvestmentController with full REST API for investment management
- Created ExternalMarketDataService for fetching real-time market data from external APIs
- Added support for Brazilian market tickers with proper Alpha Vantage formatting (.SAO suffix)
- Implemented market data caching and rate limiting to respect API limits
- Added portfolio analytics including top performers, dividend yield, and market value calculations
- Created comprehensive search and filtering capabilities by type, sector, industry, etc.
- Added investment metadata endpoints for available sectors, industries, and types
- Implemented soft delete functionality for investments
- Added market data update scheduling and background processing

This major architectural improvement provides a scalable and maintainable solution for managing all types of investments in a single unified table structure.

Related to: investments, market data, external API, Alpha Vantage, Brazilian market

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -205,6 +205,12 @@ brazilian-market.update-interval=${MARKET_DATA_UPDATE_INTERVAL:3600000}
 brazilian-market.cache.enabled=${MARKET_DATA_CACHE_ENABLED:true}
 brazilian-market.cache.ttl=${MARKET_DATA_CACHE_TTL:300000}
 
+# External Market Data API Configuration
+app.market-data.alpha-vantage.api-key=${ALPHA_VANTAGE_API_KEY:demo}
+app.market-data.alpha-vantage.base-url=${ALPHA_VANTAGE_BASE_URL:https://www.alphavantage.co/query}
+app.market-data.update-interval-minutes=${MARKET_DATA_UPDATE_INTERVAL_MINUTES:15}
+app.market-data.rate-limit-delay-ms=${MARKET_DATA_RATE_LIMIT_DELAY_MS:100}
+
 # Redis Configuration
 app.redis.host=${REDIS_HOST:localhost}
 app.redis.port=${REDIS_PORT:6379}
