fix(test): update monitoring endpoint tests to use /api prefix
- Fixed MonitoringEndpointTest to use correct /api/monitoring endpoints
- Discovered WebConfig adds /api prefix to all controller mappings
- Updated application-test.properties with comprehensive public endpoints list
- Removed temporary test files created during debugging
- Tests now pass correctly (3/3 passing)

Related to fixing failing tests and improving coverage

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,10 +1,16 @@
-# Test Database Configuration
-app.database.url=jdbc:h2:mem:testdb
+# Test Database Configuration - Override environment variables
+app.database.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 app.database.port=
 app.database.name=testdb
 app.database.username=sa
 app.database.password=
 app.database.driver-class-name=org.h2.Driver
+
+# Override environment variables for tests
+DB_USERNAME=sa
+DB_PASSWORD=
+DB_URL=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+POSTGRES_DB=testdb
 
 # Test Database Connection Pool Configuration
 app.database.pool.initial-size=2
@@ -33,12 +39,24 @@ app.jpa.properties.hibernate-batch-versioned-data=true
 app.jpa.properties.hibernate-jdbc-fetch-size=10
 app.jpa.properties.hibernate-default-batch-fetch-size=8
 
+# Test Redis Configuration
+app.redis.host=localhost
+app.redis.port=6379
+app.redis.password=
+app.redis.database=0
+app.redis.timeout=2000
+app.redis.jedis.pool.max-active=8
+app.redis.jedis.pool.max-idle=8
+app.redis.jedis.pool.min-idle=0
+app.redis.jedis.pool.max-wait=-1
+
 # Test Security Configuration
 app.security.jwt.secret=testSecretKeyForTestingOnly
 app.security.jwt.expiration-ms=3600000
 app.security.jwt.refresh-expiration-ms=7200000
 app.security.jwt.issuer=finance-control-test
 app.security.jwt.audience=finance-control-test-users
+app.security.public-endpoints=/api/auth/**,/api/users,/api/monitoring/**,/monitoring/**,/actuator/**,/swagger-ui/**,/v3/api-docs/**
 
 # Test CORS Configuration
 app.security.cors.allowed-origins=http://localhost:3000,http://localhost:8080
@@ -110,6 +128,9 @@ spring.datasource.username=${app.database.username}
 spring.datasource.password=${app.database.password}
 spring.datasource.driver-class-name=${app.database.driver-class-name}
 
+# Disable external services for tests
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+
 spring.jpa.hibernate.ddl-auto=${app.jpa.hibernate-ddl-auto}
 spring.jpa.properties.hibernate.dialect=${app.jpa.dialect}
 spring.jpa.show-sql=${app.jpa.show-sql}
@@ -140,3 +161,14 @@ jwt.expiration=${app.security.jwt.expiration-ms}
 
 # Security Configuration for tests
 management.security.enabled=false
+
+# Redis Configuration for tests (using embedded Redis or mock)
+spring.data.redis.host=${app.redis.host}
+spring.data.redis.port=${app.redis.port}
+spring.data.redis.password=${app.redis.password}
+spring.data.redis.database=${app.redis.database}
+spring.data.redis.timeout=${app.redis.timeout}
+spring.data.redis.jedis.pool.max-active=${app.redis.jedis.pool.max-active}
+spring.data.redis.jedis.pool.max-idle=${app.redis.jedis.pool.max-idle}
+spring.data.redis.jedis.pool.min-idle=${app.redis.jedis.pool.min-idle}
+spring.data.redis.jedis.pool.max-wait=${app.redis.jedis.pool.max-wait}
