--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,8 @@
 # SonarQube Configuration for Finance Control Project
 
+# SonarQube Server Configuration
+sonar.host.url=${env.SONAR_HOST_URL:http://localhost:9000}
+
 # Project identification
 sonar.projectKey=finance-control
 sonar.projectName=Finance Control
@@ -17,8 +20,8 @@ sonar.java.target=21
 sonar.sourceEncoding=UTF-8
 
 # Coverage and test reports
-sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-sonar.junit.reportPaths=target/surefire-reports
+sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+sonar.junit.reportPaths=build/test-results/test
 
 # Exclusions
 sonar.exclusions=**/target/**,**/generated/**,**/config/**,**/dto/**,**/model/**,**/exception/**,**/enums/**,**/util/**,**/validation/**
@@ -90,13 +93,13 @@ sonar.technicalDebt.rating.c=2
 sonar.technicalDebt.rating.d=4
 
 # Language specific settings
-sonar.java.binaries=target/classes
-sonar.java.libraries=target/lib/*.jar
+sonar.java.binaries=build/classes/java/main
+sonar.java.libraries=build/libs/*.jar
 
 # Plugin settings
-sonar.java.checkstyle.reportPaths=target/checkstyle-result.xml
-sonar.java.pmd.reportPaths=target/pmd.xml
-sonar.java.spotbugs.reportPaths=target/spotbugsXml.xml
+sonar.java.checkstyle.reportPaths=build/reports/checkstyle/main/checkstyle.xml
+sonar.java.pmd.reportPaths=build/reports/pmd/main/pmd.xml
+sonar.java.spotbugs.reportPaths=build/reports/spotbugs/main/spotbugs.xml
 
 # Custom rules
 sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6
@@ -119,4 +122,4 @@ sonar.issue.ignore.multicriteria.e4.ruleKey=squid:S00105
 sonar.issue.ignore.multicriteria.e4.resourceKey=**/*.java
 
 sonar.issue.ignore.multicriteria.e5.ruleKey=squid:S00107
-sonar.issue.ignore.multicriteria.e5.resourceKey=**/*.java 
+sonar.issue.ignore.multicriteria.e5.resourceKey=**/*.java
