fix: remove duplicate property keys in configuration files
- Remove duplicate property keys in application.properties (Spring Boot Actuator)
- Remove duplicate JPA property keys in application-docker.properties
- Remove duplicate JWT keys in application-test.properties
- Fix property file syntax and eliminate configuration conflicts

Ensures proper configuration loading and prevents property override issues

--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -28,10 +28,7 @@ app.database.pool.connection-timeout=${DB_POOL_CONNECTION_TIMEOUT:20000}
 app.database.pool.idle-timeout=${DB_POOL_IDLE_TIMEOUT:300000}
 app.database.pool.leak-detection-threshold=${DB_POOL_LEAK_DETECTION_THRESHOLD:60000}
 
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:validate}
-spring.jpa.show-sql=${JPA_SHOW_SQL:false}
-spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:false}
+# JPA/Hibernate Additional Configuration
 spring.jpa.properties.hibernate.use_sql_comments=${HIBERNATE_USE_SQL_COMMENTS:false}
 spring.jpa.properties.hibernate.jdbc.batch_size=${HIBERNATE_JDBC_BATCH_SIZE:20}
 spring.jpa.properties.hibernate.order_inserts=${HIBERNATE_ORDER_INSERTS:true}
