--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -103,7 +103,7 @@ app.open-api.description=${OPENAPI_DESCRIPTION:API for managing personal finance
 app.open-api.version=${OPENAPI_VERSION:1.0.0}
 app.open-api.contact-name=${OPENAPI_CONTACT_NAME:Finance Control Team}
 app.open-api.contact-email=${OPENAPI_CONTACT_EMAIL:support@finance-control.com}
-app.open-api.contact-url=${OPENAPI_CONTACT_URL:https://github.com/LucasSantana-Dev/finance-control}
+app.open-api.contact-url=${OPENAPI_CONTACT_URL:https://github.com/LucasSantana/finance-control}
 app.open-api.license-name=${OPENAPI_LICENSE_NAME:MIT License}
 app.open-api.license-url=${OPENAPI_LICENSE_URL:https://opensource.org/licenses/MIT}
 app.open-api.server-url=${OPENAPI_SERVER_URL:http://localhost:8080}
@@ -115,12 +115,17 @@ app.pagination.max-page-size=${PAGINATION_MAX_PAGE_SIZE:100}
 app.pagination.default-sort=${PAGINATION_DEFAULT_SORT:id}
 app.pagination.default-direction=${PAGINATION_DEFAULT_DIRECTION:ASC}
 
-# Legacy Spring Boot Properties (for backward compatibility) - DISABLED
-# Using custom DatabaseConfig instead
-# spring.datasource.url=${app.database.url}:${app.database.port}/${app.database.name}
-# spring.datasource.username=${app.database.username}
-# spring.datasource.password=${app.database.password}
-# spring.datasource.driver-class-name=${app.database.driver-class-name}
+# Spring Boot DataSource Configuration (explicit to prevent auto-configuration issues)
+spring.datasource.url=jdbc:postgresql://db:5432/finance_control?sslmode=disable
+spring.datasource.username=finance_user
+spring.datasource.password=finance_password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=300000
+spring.datasource.hikari.leak-detection-threshold=60000
 
 # Bean definition override to resolve JPA auditing handler conflict
 spring.main.allow-bean-definition-overriding=true
@@ -173,9 +178,7 @@ app.monitoring.enabled=${MONITORING_ENABLED:true}
 app.monitoring.sentry.enabled=${SENTRY_ENABLED:true}
 app.monitoring.health-check.interval=${HEALTH_CHECK_INTERVAL:30}
 
-# Spring Boot Actuator Configuration
-management.endpoints.web.exposure.include=health,info,metrics,env,configprops,beans,mappings,loggers
-management.endpoint.health.show-details=when-authorized
+# Spring Boot Actuator Configuration (additional settings)
 management.endpoint.health.show-components=always
 management.endpoint.info.enabled=true
 management.endpoint.metrics.enabled=true
