--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -57,7 +57,7 @@ app.security.jwt.audience=finance-control-users
 # app.redis.jedis.pool.min-idle=0
 # app.redis.jedis.pool.max-wait=-1
 
-# Test Security Configuration
+# Test Security Configuration (additional test settings)
 app.security.jwt.secret=testSecretKeyForTestingOnly
 app.security.jwt.expiration-ms=3600000
 app.security.jwt.refresh-expiration-ms=7200000
@@ -117,7 +117,7 @@ app.open-api.description=API for managing personal finances - Test Environment
 app.open-api.version=1.0.0-test
 app.open-api.contact-name=Finance Control Team
 app.open-api.contact-email=test@finance-control.com
-app.open-api.contact-url=https://github.com/LucasSantana-Dev/finance-control
+app.open-api.contact-url=https://github.com/LucasSantana/finance-control
 app.open-api.license-name=MIT License
 app.open-api.license-url=https://opensource.org/licenses/MIT
 app.open-api.server-url=http://localhost:0
