chore: update .gitignore to exclude IDE inspection files
- Add .descriptions.xml and .xml to .gitignore
- Prevent committing IDE-generated inspection files

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,11 @@ logs/
 # Backup files
 *.backup
 build.gradle.backup
+
+# IDE inspection files
+.descriptions.xml
+.xml
+
+# IDE inspection files
+.descriptions.xml
+.xml
