fix: add gradle-wrapper.jar to repository for CI/CD
- Add exception in .gitignore for gradle-wrapper.jar
- Commit gradle-wrapper.jar to enable GitHub Actions workflows
- Fixes 'Unable to access jarfile' error in SonarQube Cloud workflow

--- a/.gitignore
+++ b/.gitignore
@@ -96,8 +96,8 @@ Thumbs.db
 *.tar.gz
 *.rar
 
-# Gradle Wrapper
-# Note: gradle-wrapper.jar is ignored by *.jar rule above
+# Gradle Wrapper (exception - must be committed for CI/CD)
+!gradle/wrapper/gradle-wrapper.jar
 
 # Virtual machine crash logs
 hs_err_pid*
