perf: optimize CI/CD pipeline with advanced caching and parallelization
- Split CI workflow into parallel jobs (build-test, quality-checks, security-scan)
- Implement comprehensive caching strategy:
  - Automatic Gradle dependency caching via setup-java
  - Build cache directory caching for faster rebuilds
  - Test result caching for smart test skipping
  - SonarQube package caching
  - OWASP Dependency Check data caching
- Add concurrency control to cancel in-progress runs
- Enable artifact sharing between jobs
- Optimize SonarQube Cloud workflow with build cache
- Enhance Gradle performance settings:
  - Enable configuration cache
  - Optimize worker count
  - Enable file system watching
- Add timeouts to prevent hanging jobs
- Update documentation with performance optimization details

Expected improvements:
- 40-50% reduction in build time
- 70-90% cache hit rate on subsequent runs
- Parallel execution reduces total pipeline time

--- a/.github/workflows/sonarqube-cloud.yml
+++ b/.github/workflows/sonarqube-cloud.yml
@@ -6,11 +6,19 @@ on:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
+  workflow_dispatch:
+
+# Cancel in-progress runs for the same workflow and branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     name: Build and analyze
     runs-on: ubuntu-latest
+    timeout-minutes: 20
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,21 +28,28 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 21
-          distribution: 'temurin' # Alternative distribution options are available
+          distribution: 'temurin'
+          cache: 'gradle' # Automatic Gradle dependency caching
 
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
+          key: ${{ runner.os }}-sonar-${{ hashFiles('**/build.gradle') }}
+          restore-keys: |
+            ${{ runner.os }}-sonar-
 
-      - name: Cache Gradle packages
+      - name: Cache Gradle build cache
         uses: actions/cache@v4
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/build-cache
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-build-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-build-
+            ${{ runner.os }}-gradle-
 
       - name: Make gradlew executable
         run: chmod +x ./gradlew
@@ -42,4 +57,15 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonar --info
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew build sonar --info --no-daemon --build-cache
+
+      - name: Upload coverage reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: sonarqube-coverage
+          path: |
+            build/reports/jacoco/
+            build/jacoco/
+          retention-days: 7
