--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,10 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 org.gradle.console=rich
 
 # Build cache
-org.gradle.caching=true 
+org.gradle.caching=true
+
+# Performance optimizations for CI/CD
+org.gradle.workers.max=4
+org.gradle.vfs.watch=true
+org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
