--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,99 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
+  workflow_dispatch:
+
+# Cancel in-progress runs for the same workflow and branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build-and-test:
+    name: Build and Test
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # Full history for better caching
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: 'gradle' # Automatic Gradle dependency caching
+
+    - name: Cache Gradle build cache
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/build-cache
+        key: ${{ runner.os }}-gradle-build-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-build-
+          ${{ runner.os }}-gradle-
+
+    - name: Cache test results
+      uses: actions/cache@v4
+      id: test-cache
+      with:
+        path: build/test-results
+        key: ${{ runner.os }}-test-results-${{ hashFiles('**/*.java', '**/*.gradle*') }}
+        restore-keys: |
+          ${{ runner.os }}-test-results-
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew build --no-daemon --build-cache
+
+    - name: Run tests
+      run: ./gradlew test --no-daemon --build-cache
+
+    - name: Generate JaCoCo coverage report
+      run: ./gradlew jacocoTestReport --no-daemon
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: build-artifacts
+        path: |
+          build/classes
+          build/libs
+        retention-days: 1
+
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: test-results
+        path: |
+          build/test-results/
+          build/reports/tests/
+        retention-days: 7
+
+    - name: Upload coverage reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: coverage-reports
+        path: |
+          build/reports/jacoco/
+          build/jacoco/
+        retention-days: 30
+
+  quality-checks:
+    name: Quality Checks
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    needs: build-and-test
 
     steps:
     - name: Checkout code
@@ -19,6 +108,66 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
+        cache: 'gradle'
+
+    - name: Cache Gradle packages
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: build-artifacts
+        path: build/
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Run Checkstyle
+      run: ./gradlew checkstyleMain checkstyleTest --no-daemon
+      continue-on-error: true
+
+    - name: Run PMD
+      run: ./gradlew pmdMain pmdTest --no-daemon
+      continue-on-error: true
+
+    - name: Run SpotBugs
+      run: ./gradlew spotbugsMain spotbugsTest --no-daemon
+      continue-on-error: true
+
+    - name: Upload quality reports
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: quality-reports
+        path: |
+          build/reports/checkstyle/
+          build/reports/pmd/
+          build/reports/spotbugs/
+        retention-days: 30
+
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    timeout-minutes: 25
+    needs: build-and-test
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: 'gradle'
 
     - name: Cache Gradle packages
       uses: actions/cache@v4
@@ -41,65 +190,34 @@ jobs:
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
-    - name: Clean build
-      run: ./gradlew clean build --no-daemon
-
-    - name: Run quality checks (Checkstyle, PMD, SpotBugs)
-      run: ./gradlew qualityCheck --no-daemon
-
-    - name: Generate JaCoCo test coverage report
-      run: ./gradlew jacocoTestReport --no-daemon
-
     - name: Run OWASP Dependency Check
       run: ./gradlew dependencyCheckAnalyze --no-daemon
       continue-on-error: true
 
-    - name: Upload Checkstyle reports
+    - name: Upload security reports
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: checkstyle-reports
-        path: build/reports/checkstyle/
-        retention-days: 30
-
-    - name: Upload PMD reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: pmd-reports
-        path: build/reports/pmd/
-        retention-days: 30
-
-    - name: Upload SpotBugs reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: spotbugs-reports
-        path: build/reports/spotbugs/
-        retention-days: 30
-
-    - name: Upload JaCoCo coverage reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: jacoco-reports
-        path: |
-          build/reports/jacoco/
-          build/jacoco/
-        retention-days: 30
-
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: build/test-results/
-        retention-days: 30
-
-    - name: Upload OWASP Dependency Check reports
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: owasp-dependency-check-reports
+        name: security-reports
         path: build/reports/
         retention-days: 30
+
+  ci-summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    needs: [build-and-test, quality-checks, security-scan]
+    if: always()
+
+    steps:
+    - name: Check job results
+      run: |
+        echo "Build and Test: ${{ needs.build-and-test.result }}"
+        echo "Quality Checks: ${{ needs.quality-checks.result }}"
+        echo "Security Scan: ${{ needs.security-scan.result }}"
+
+        if [ "${{ needs.build-and-test.result }}" != "success" ]; then
+          echo "❌ Build and test failed"
+          exit 1
+        fi
+
+        echo "✅ CI pipeline completed"
