--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,38 +34,39 @@ jobs:
     - name: Cache Gradle build cache
       uses: actions/cache@v4
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/build-cache
-        key: ${{ runner.os }}-gradle-build-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        path: ~/.gradle/build-cache
+        key: ${{ runner.os }}-gradle-build-cache-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle-build-
-          ${{ runner.os }}-gradle-
-
-    - name: Cache test results
-      uses: actions/cache@v4
-      id: test-cache
-      with:
-        path: build/test-results
-        key: ${{ runner.os }}-test-results-${{ hashFiles('**/*.java', '**/*.gradle*') }}
-        restore-keys: |
-          ${{ runner.os }}-test-results-
+          ${{ runner.os }}-gradle-build-cache-
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle
-      run: ./gradlew build --no-daemon --build-cache
+    - name: Display Gradle information
+      run: ./gradlew --version
 
-    - name: Run tests
-      run: ./gradlew test --no-daemon --build-cache
+    - name: Check cache status
+      run: |
+        echo "Build cache enabled: $(grep 'org.gradle.caching' gradle.properties || echo 'not found')"
+        echo "Configuration cache: $(grep 'org.gradle.unsafe.configuration-cache' gradle.properties || echo 'not found')"
+
+    - name: Build and test with Gradle
+      env:
+        GRADLE_OPTS: -Dorg.gradle.unsafe.configuration-cache=false
+      run: ./gradlew build --no-daemon --build-cache --stacktrace --info
 
     - name: Generate JaCoCo coverage report
       run: ./gradlew jacocoTestReport --no-daemon
 
+    - name: Prepare artifact directories on failure
+      if: failure()
+      run: |
+        mkdir -p build/classes build/libs build/reports/jacoco build/test-results build/reports/tests || true
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       if: always()
+      continue-on-error: true
       with:
         name: build-artifacts
         path: |
@@ -76,6 +77,7 @@ jobs:
     - name: Upload test results
       uses: actions/upload-artifact@v4
       if: always()
+      continue-on-error: true
       with:
         name: test-results
         path: |
@@ -86,6 +88,7 @@ jobs:
     - name: Upload coverage reports
       uses: actions/upload-artifact@v4
       if: always()
+      continue-on-error: true
       with:
         name: coverage-reports
         path: |
@@ -110,15 +113,13 @@ jobs:
         distribution: 'temurin'
         cache: 'gradle'
 
-    - name: Cache Gradle packages
+    - name: Cache Gradle build cache
       uses: actions/cache@v4
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        path: ~/.gradle/build-cache
+        key: ${{ runner.os }}-gradle-build-cache-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle-
+          ${{ runner.os }}-gradle-build-cache-
 
     - name: Download build artifacts
       uses: actions/download-artifact@v4
@@ -169,15 +170,13 @@ jobs:
         distribution: 'temurin'
         cache: 'gradle'
 
-    - name: Cache Gradle packages
+    - name: Cache Gradle build cache
       uses: actions/cache@v4
       with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        path: ~/.gradle/build-cache
+        key: ${{ runner.os }}-gradle-build-cache-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
         restore-keys: |
-          ${{ runner.os }}-gradle-
+          ${{ runner.os }}-gradle-build-cache-
 
     - name: Cache OWASP Dependency-Check data
       uses: actions/cache@v4
