fix: disable configuration cache for jacocoTestReport step
The jacocoTestReport task was failing due to configuration cache
issues. Disable it for this step to ensure coverage reports are
generated successfully.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,8 @@ jobs:
       run: ./gradlew build --no-daemon --build-cache --stacktrace --info
 
     - name: Generate JaCoCo coverage report
+      env:
+        GRADLE_OPTS: -Dorg.gradle.unsafe.configuration-cache=false
       run: ./gradlew jacocoTestReport --no-daemon
 
     - name: Prepare artifact directories on failure
